Working state: All 3 transactions parsing and inserting correctly - SNAPSHOT before cron job setup

--- a/env.example
+++ b/env.example
@@ -47,3 +47,20 @@ APP_VERSION=1.0.0
 # Parser Configuration
 DEFAULT_PARSER=cashapp
 SUPPORTED_PARSERS=["cashapp", "paypal", "venmo"]
+
+# Supabase Configuration (for multi-account OAuth support)
+# The email-reader will fetch email integrations from Supabase api.email_integrations table
+# These values are hardcoded in config/supabase.py but can be overridden via env vars
+# SUPABASE_URL=https://dshlixmkpqpdnnixkykl.supabase.co
+# SUPABASE_ANON_KEY=your_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+
+# Google OAuth Configuration (for token refresh)
+# These should match the credentials in: Supabase Dashboard → Authentication → Providers → Google
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# Batch Job Security (Optional)
+# If set, all /batch/* endpoints require X-API-Key header with this value
+# If not set, batch endpoints are publicly accessible
+BATCH_JOB_API_KEY=your_secret_batch_api_key_here
