--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
-# Core dependencies - pinned versions for stability
+# Core dependencies - tested and working together
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
-pydantic>=2.0,<3.0
+pydantic==2.5.3
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
 
 # Database
 sqlalchemy==2.0.25
-alembic==1.13.1
 
 # HTTP client
 httpx==0.26.0
 requests==2.31.0
 
-# Supabase - let supabase package handle its own dependencies
+# Supabase - this will install all compatible sub-dependencies automatically
 supabase==2.3.4
 
 # OAuth and Gmail API
@@ -25,18 +24,5 @@ google-api-python-client==2.115.0
 # Date parsing
 python-dateutil==2.8.2
 
-# Email parsing
-email-validator==2.1.0
-
 # Production server
 python-multipart==0.0.6
-
-# Testing (optional - can be removed for production)
-pytest==7.4.4
-pytest-asyncio==0.23.3
-pytest-cov==4.1.0
-
-# Code quality (optional - can be removed for production)
-black==23.12.1
-flake8==7.0.0
-mypy==1.8.0
