--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,16 @@
-# Core dependencies - tested and working together
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-
-# Database
-sqlalchemy==2.0.25
-
-# HTTP client
-httpx==0.26.0
-requests==2.31.0
-
-# Supabase - this will install all compatible sub-dependencies automatically
-supabase==2.3.4
-
-# OAuth and Gmail API
-google-auth==2.26.2
-google-auth-oauthlib==1.2.0
-google-auth-httplib2==0.2.0
-google-api-python-client==2.115.0
-
-# Date parsing
-python-dateutil==2.8.2
-
-# Production server
-python-multipart==0.0.6
+# Minimal production requirements - let pip resolve versions
+fastapi
+uvicorn[standard]
+pydantic>=2.0
+pydantic-settings
+python-dotenv
+sqlalchemy
+httpx
+requests
+supabase
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+python-dateutil
+python-multipart
